WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181260
Fix BytecodeParser op_catch assert to work with useProfiler=1
https://bugs.webkit.org/show_bug.cgi?id=181260
Summary
Fix BytecodeParser op_catch assert to work with useProfiler=1
Saam Barati
Reported
2018-01-03 14:19:46 PST
....
Attachments
patch
(1.61 KB, patch)
2018-01-03 14:27 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2018-01-03 14:27:16 PST
Created
attachment 330415
[details]
patch
WebKit Commit Bot
Comment 2
2018-01-03 16:44:40 PST
Comment on
attachment 330415
[details]
patch Clearing flags on attachment: 330415 Committed
r226379
: <
https://trac.webkit.org/changeset/226379
>
WebKit Commit Bot
Comment 3
2018-01-03 16:44:42 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-01-03 16:46:33 PST
<
rdar://problem/36287747
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug